--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
     body {
       min-height: 100dvh;
       font-family: 'Inter', system-ui, sans-serif;
-      background: url('wllpbk.jpg') center / cover no-repeat fixed;
-      background-color: #000;
+      background: url('wllpbk.jpg') center / cover no-repeat fixed #000;
       color: var(--text);
       line-height: 1.6;
       overflow-x: hidden;
     }
 
-    /* Floating sticky logo bubble – always visible unless icon menu is open */
+    /* Floating bubble (always visible unless icon menu is open) */
     .floating-bubble {
       position: fixed;
       left: 24px;
@@ -53,19 +52,19 @@
       z-index: 130;
     }
 
-    .floating-bubble img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
     .floating-bubble.hidden {
       opacity: 0;
       transform: scale(0.5) translateY(-30px);
       pointer-events: none;
     }
 
-    /* Expanded icon-only menu */
+    .floating-bubble img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    /* Icon menu (first level) */
     .icon-menu {
       position: fixed;
       left: 16px;
@@ -134,11 +133,9 @@
       transform: scale(1.1);
     }
 
-    .theme-btn {
-      margin-top: auto;
-    }
+    .theme-btn { margin-top: auto; }
 
-    /* Slide-out text menu */
+    /* Text menu (second level) */
     .text-menu {
       position: fixed;
       left: 112px;
@@ -199,7 +196,7 @@
     .text-links a:hover,
     .text-links a.active { background: rgba(255,255,255,0.12); }
 
-    /* Main content sections */
+    /* Sections */
     .parallax-section {
       position: relative;
       min-height: 100vh;
@@ -209,17 +206,10 @@
       padding: 8rem 5% 6rem;
     }
 
-    .parallax-bg-layer {
-      position: absolute;
-      inset: 0;
-      background: url('wllpbk.jpg') center / cover no-repeat fixed;
-      z-index: -1;
-    }
-
     .section-content {
       position: relative;
       z-index: 2;
-      max-width: 1200px;
+      max-width: 1100px;
       width: 100%;
       text-align: center;
     }
@@ -238,6 +228,24 @@
       max-width: 780px;
       margin: 0 auto 3rem;
       line-height: 1.5;
+    }
+
+    #about .section-content {
+      text-align: left;
+      max-width: 900px;
+    }
+
+    #about h2 {
+      font-size: clamp(3.5rem, 8vw, 6rem);
+      font-weight: 900;
+      margin-bottom: 2rem;
+      color: white;
+    }
+
+    #about p {
+      font-size: 1.25rem;
+      color: var(--text-light);
+      line-height: 1.8;
     }
 
     /* Footer */
@@ -327,41 +335,41 @@
 
     @media (max-width: 768px) {
       .floating-bubble { left: 16px; top: 16px; width: 56px; height: 56px; }
-      .expanded-nav { left: 12px; width: 68px; }
-      .slide-sidebar { left: 90px; width: 86vw; max-width: 340px; }
+      .icon-menu { left: 12px; width: 68px; }
+      .text-menu { left: 90px; width: 86vw; max-width: 340px; }
       footer { padding: 4rem 5% 3rem; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Floating sticky bubble (logo only) -->
+  <!-- Floating bubble (logo only) -->
   <div class="floating-bubble" id="floating-bubble">
     <img src="nobklogo.png" alt="John Mark Kiritu">
   </div>
 
-  <!-- Expanded icon menu -->
-  <nav class="expanded-nav" id="expanded-nav">
+  <!-- Icon menu (first level) -->
+  <nav class="icon-menu" id="icon-menu">
     <div id="hamburger" class="hamburger-btn">
       <i class="fa-solid fa-bars"></i>
     </div>
 
-    <div class="nav-icons">
+    <div class="icon-items">
       <div class="icon-item active" data-section="home" title="Home"><i class="fa-solid fa-house"></i></div>
       <div class="icon-item" data-section="about" title="About"><i class="fa-solid fa-user"></i></div>
       <div class="icon-item" data-section="education" title="Education"><i class="fa-solid fa-graduation-cap"></i></div>
       <div class="icon-item" data-section="experience" title="Experience"><i class="fa-solid fa-briefcase"></i></div>
       <div class="icon-item" data-section="technologies" title="Technologies"><i class="fa-solid fa-microchip"></i></div>
       <div class="icon-item" data-section="services" title="Services"><i class="fa-solid fa-layer-group"></i></div>
-      <div class="icon-item theme-toggle" id="theme-toggle" title="Toggle theme">
+      <div class="icon-item theme-btn" id="theme-toggle" title="Toggle theme">
         <i class="fa-solid fa-moon" id="theme-icon"></i>
       </div>
       <div class="icon-item" data-section="contact" title="Contact"><i class="fa-solid fa-envelope"></i></div>
     </div>
   </nav>
 
-  <!-- Slide-out text menu -->
-  <aside class="slide-sidebar" id="slide-sidebar">
+  <!-- Text menu (second level) -->
+  <aside class="text-menu" id="text-menu">
     <div class="profile">
       <img src="nobklogo.png" alt="John Mark Kiritu">
       <div>
@@ -370,7 +378,7 @@
       </div>
     </div>
 
-    <div class="sidebar-links">
+    <div class="text-links">
       <a href="#home" class="active"><i class="fa-solid fa-house"></i>Home</a>
       <a href="#about"><i class="fa-solid fa-user"></i>About</a>
       <a href="#education"><i class="fa-solid fa-graduation-cap"></i>Education</a>
@@ -381,7 +389,7 @@
     </div>
   </aside>
 
-  <!-- Main content – Home / Welcome -->
+  <!-- Home -->
   <section id="home" class="parallax-section">
     <div class="section-content">
       <h1>Welcome to My Portfolio</h1>
@@ -392,7 +400,7 @@
     </div>
   </section>
 
-  <!-- About section -->
+  <!-- About -->
   <section id="about" class="parallax-section">
     <div class="section-content">
       <h2>About Me</h2>
@@ -402,7 +410,7 @@
     </div>
   </section>
 
-  <!-- Placeholder sections -->
+  <!-- Other sections -->
   <section id="education" class="parallax-section">
     <div class="section-content">
       <h2>Education</h2>
@@ -501,42 +509,43 @@
 
   <script>
     const floatingBubble = document.getElementById('floating-bubble');
-    const expandedNav = document.getElementById('expanded-nav');
+    const iconMenu = document.getElementById('icon-menu');
     const hamburger = document.getElementById('hamburger');
-    const sidebar = document.getElementById('slide-sidebar');
+    const textMenu = document.getElementById('text-menu');
 
-    // 1. Click floating bubble → show icon menu
+    // 1. Click floating bubble → show icon menu, hide bubble
     floatingBubble.addEventListener('click', () => {
-      expandedNav.classList.add('visible');
+      iconMenu.classList.add('visible');
       floatingBubble.classList.add('hidden');
     });
 
-    // 2. Click hamburger inside icon menu → show text sidebar
+    // 2. Click hamburger → toggle text menu
     hamburger.addEventListener('click', (e) => {
       e.stopPropagation();
-      sidebar.classList.toggle('open');
+      textMenu.classList.toggle('open');
     });
 
-    // Close text sidebar when clicking outside
+    // Close text menu when clicking outside
     document.addEventListener('click', (e) => {
-      if (!sidebar.contains(e.target) && !hamburger.contains(e.target)) {
-        sidebar.classList.remove('open');
+      if (!textMenu.contains(e.target) && !hamburger.contains(e.target)) {
+        textMenu.classList.remove('open');
       }
     });
 
-    // Close text sidebar after selecting a link
-    document.querySelectorAll('.sidebar-links a').forEach(link => {
+    // Close text menu after clicking a section link
+    document.querySelectorAll('.text-links a').forEach(link => {
       link.addEventListener('click', () => {
-        sidebar.classList.remove('open');
+        textMenu.classList.remove('open');
+        // icon menu stays visible
       });
     });
 
-    // Collapse icon menu back to floating bubble when clicking outside
+    // Collapse icon menu + show bubble when clicking outside icon menu
     document.addEventListener('click', (e) => {
-      if (!expandedNav.contains(e.target) && !floatingBubble.contains(e.target) && expandedNav.classList.contains('visible')) {
-        expandedNav.classList.remove('visible');
+      if (!iconMenu.contains(e.target) && !floatingBubble.contains(e.target) && iconMenu.classList.contains('visible')) {
+        iconMenu.classList.remove('visible');
         floatingBubble.classList.remove('hidden');
-        sidebar.classList.remove('open');
+        textMenu.classList.remove('open');
       }
     });
 
@@ -562,7 +571,7 @@
 
     // Active link highlighting
     const sections = document.querySelectorAll('section[id]');
-    const navLinks = document.querySelectorAll('.sidebar-links a, .icon-item[data-section]');
+    const navLinks = document.querySelectorAll('.text-links a, .icon-item[data-section]');
 
     window.addEventListener('scroll', () => {
       let current = '';
