--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       overflow-x: hidden;
     }
 
-    /* Floating bubble (always visible unless icon menu is open) */
+    /* Floating bubble */
     .floating-bubble {
       position: fixed;
       left: 24px;
@@ -58,13 +58,9 @@
       pointer-events: none;
     }
 
-    .floating-bubble img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+    .floating-bubble img { width: 100%; height: 100%; object-fit: cover; }
 
-    /* Icon menu (first level) */
+    /* Icon menu */
     .icon-menu {
       position: fixed;
       left: 16px;
@@ -75,7 +71,7 @@
       backdrop-filter: blur(22px);
       border: 1px solid var(--border);
       border-radius: 32px;
-      padding: 100px 0 24px;
+      padding: 20px 0;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -86,10 +82,7 @@
       transition: all 0.45s cubic-bezier(0.34, 1.56, 0.64, 1);
     }
 
-    .icon-menu.visible {
-      opacity: 1;
-      pointer-events: auto;
-    }
+    .icon-menu.visible { opacity: 1; pointer-events: auto; }
 
     .hamburger-btn {
       width: 56px;
@@ -104,16 +97,9 @@
       transition: all 0.3s;
     }
 
-    .hamburger-btn:hover {
-      background: var(--accent);
-      transform: scale(1.12);
-    }
+    .hamburger-btn:hover { background: var(--accent); transform: scale(1.12); }
 
-    .icon-items {
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-    }
+    .icon-items { display: flex; flex-direction: column; gap: 16px; }
 
     .icon-item {
       width: 52px;
@@ -128,14 +114,11 @@
       transition: all 0.25s;
     }
 
-    .icon-item:hover, .icon-item.active {
-      background: var(--accent);
-      transform: scale(1.1);
-    }
+    .icon-item:hover, .icon-item.active { background: var(--accent); transform: scale(1.1); }
 
     .theme-btn { margin-top: auto; }
 
-    /* Text menu (second level) */
+    /* Text menu */
     .text-menu {
       position: fixed;
       left: 112px;
@@ -155,28 +138,14 @@
       opacity: 0;
     }
 
-    .text-menu.open {
-      transform: translateY(-50%) translateX(0);
-      pointer-events: auto;
-      opacity: 1;
-    }
+    .text-menu.open { transform: translateY(-50%) translateX(0); pointer-events: auto; opacity: 1; }
 
     .text-menu::-webkit-scrollbar { display: none; }
     .text-menu { scrollbar-width: none; }
 
-    .profile {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      margin-bottom: 44px;
-    }
+    .profile { display: flex; align-items: center; gap: 20px; margin-bottom: 44px; }
 
-    .profile img {
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      border: 3px solid var(--border);
-    }
+    .profile img { width: 70px; height: 70px; border-radius: 50%; border: 3px solid var(--border); }
 
     .profile h4 { font-size: 1.4rem; font-weight: 600; }
     .profile span { font-size: 1rem; color: var(--text-light); }
@@ -193,8 +162,7 @@
       transition: background 0.25s;
     }
 
-    .text-links a:hover,
-    .text-links a.active { background: rgba(255,255,255,0.12); }
+    .text-links a:hover, .text-links a.active { background: rgba(255,255,255,0.12); }
 
     /* Sections */
     .parallax-section {
@@ -209,7 +177,7 @@
     .section-content {
       position: relative;
       z-index: 2;
-      max-width: 1100px;
+      max-width: 1200px;
       width: 100%;
       text-align: center;
     }
@@ -230,22 +198,90 @@
       line-height: 1.5;
     }
 
-    #about .section-content {
-      text-align: left;
-      max-width: 900px;
+    /* Horizontal Education Timeline */
+    .timeline-horizontal {
+      position: relative;
+      max-width: 1100px;
+      margin: 4rem auto;
+      padding: 2rem 0;
     }
 
-    #about h2 {
-      font-size: clamp(3.5rem, 8vw, 6rem);
-      font-weight: 900;
-      margin-bottom: 2rem;
+    .timeline-horizontal::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      height: 4px;
+      background: linear-gradient(to right, var(--accent), #60a5fa);
+      transform: translateY(-50%);
+      z-index: 0;
+    }
+
+    .timeline-items {
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+      z-index: 1;
+      flex-wrap: wrap;
+      gap: 2rem;
+    }
+
+    .timeline-entry {
+      flex: 1;
+      min-width: 220px;
+      text-align: center;
+      background: rgba(255,255,255,0.06);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 16px;
+      padding: 1.5rem;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      transition: transform 0.3s ease;
+    }
+
+    .timeline-entry:hover {
+      transform: translateY(-12px);
+    }
+
+    .timeline-icon {
+      width: 70px;
+      height: 70px;
+      background: var(--accent);
+      color: white;
+      border-radius: 50%;
+      display: grid;
+      place-items: center;
+      font-size: 1.8rem;
+      margin: 0 auto 1rem;
+      box-shadow: 0 8px 20px rgba(59,130,246,0.35);
+      border: 4px solid #000;
+    }
+
+    .timeline-date {
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: var(--accent);
+      margin-bottom: 0.8rem;
+    }
+
+    .timeline-degree {
+      font-size: 1.35rem;
+      font-weight: 700;
+      margin-bottom: 0.6rem;
       color: white;
     }
 
-    #about p {
-      font-size: 1.25rem;
+    .timeline-school {
+      font-size: 1.05rem;
       color: var(--text-light);
-      line-height: 1.8;
+      font-style: italic;
+    }
+
+    @media (max-width: 900px) {
+      .timeline-items { flex-direction: column; align-items: center; }
+      .timeline-horizontal::before { display: none; }
+      .timeline-entry { width: 90%; }
     }
 
     /* Footer */
@@ -332,23 +368,16 @@
       color: #64748b;
       font-size: 0.92rem;
     }
-
-    @media (max-width: 768px) {
-      .floating-bubble { left: 16px; top: 16px; width: 56px; height: 56px; }
-      .icon-menu { left: 12px; width: 68px; }
-      .text-menu { left: 90px; width: 86vw; max-width: 340px; }
-      footer { padding: 4rem 5% 3rem; }
-    }
   </style>
 </head>
 <body>
 
-  <!-- Floating bubble (logo only) -->
+  <!-- Floating bubble -->
   <div class="floating-bubble" id="floating-bubble">
     <img src="nobklogo.png" alt="John Mark Kiritu">
   </div>
 
-  <!-- Icon menu (first level) -->
+  <!-- Icon menu -->
   <nav class="icon-menu" id="icon-menu">
     <div id="hamburger" class="hamburger-btn">
       <i class="fa-solid fa-bars"></i>
@@ -368,7 +397,7 @@
     </div>
   </nav>
 
-  <!-- Text menu (second level) -->
+  <!-- Text menu -->
   <aside class="text-menu" id="text-menu">
     <div class="profile">
       <img src="nobklogo.png" alt="John Mark Kiritu">
@@ -410,14 +439,56 @@
     </div>
   </section>
 
-  <!-- Other sections -->
+  <!-- Education Timeline -->
   <section id="education" class="parallax-section">
     <div class="section-content">
-      <h2>Education</h2>
-      <p>Your education background...</p>
+      <h2>Education Timeline</h2>
+
+      <div class="timeline-horizontal">
+        <div class="timeline-items">
+
+          <div class="timeline-entry">
+            <div class="timeline-icon">
+              <i class="fas fa-university"></i>
+            </div>
+            <div class="timeline-date">2018 – 2021</div>
+            <h3>Bachelor’s Degree in Information Technology</h3>
+            <p class="institution">Uganda Christian University</p>
+          </div>
+
+          <div class="timeline-entry">
+            <div class="timeline-icon">
+              <i class="fas fa-certificate"></i>
+            </div>
+            <div class="timeline-date">2016 – 2017</div>
+            <h3>Uganda Advanced Certificate of Education</h3>
+            <p class="institution">St. Lawrence College Paris Palais</p>
+          </div>
+
+          <div class="timeline-entry">
+            <div class="timeline-icon">
+              <i class="fas fa-school"></i>
+            </div>
+            <div class="timeline-date">2012 – 2015</div>
+            <h3>Uganda Certificate of Education</h3>
+            <p class="institution">Mbarara High School</p>
+          </div>
+
+          <div class="timeline-entry">
+            <div class="timeline-icon">
+              <i class="fas fa-book-reader"></i>
+            </div>
+            <div class="timeline-date">2005 – 2011</div>
+            <h3>Primary Leaving Examination</h3>
+            <p class="institution">Mbarara Preparatory School</p>
+          </div>
+
+        </div>
+      </div>
     </div>
   </section>
 
+  <!-- Other sections (placeholders) -->
   <section id="experience" class="parallax-section">
     <div class="section-content">
       <h2>Experience</h2>
@@ -513,34 +584,28 @@
     const hamburger = document.getElementById('hamburger');
     const textMenu = document.getElementById('text-menu');
 
-    // 1. Click floating bubble → show icon menu, hide bubble
     floatingBubble.addEventListener('click', () => {
       iconMenu.classList.add('visible');
       floatingBubble.classList.add('hidden');
     });
 
-    // 2. Click hamburger → toggle text menu
     hamburger.addEventListener('click', (e) => {
       e.stopPropagation();
       textMenu.classList.toggle('open');
     });
 
-    // Close text menu when clicking outside
     document.addEventListener('click', (e) => {
       if (!textMenu.contains(e.target) && !hamburger.contains(e.target)) {
         textMenu.classList.remove('open');
       }
     });
 
-    // Close text menu after clicking a section link
     document.querySelectorAll('.text-links a').forEach(link => {
       link.addEventListener('click', () => {
         textMenu.classList.remove('open');
-        // icon menu stays visible
       });
     });
 
-    // Collapse icon menu + show bubble when clicking outside icon menu
     document.addEventListener('click', (e) => {
       if (!iconMenu.contains(e.target) && !floatingBubble.contains(e.target) && iconMenu.classList.contains('visible')) {
         iconMenu.classList.remove('visible');
@@ -569,7 +634,7 @@
       setTheme(current === 'dark' ? 'light' : 'dark');
     });
 
-    // Active link highlighting
+    // Active highlighting
     const sections = document.querySelectorAll('section[id]');
     const navLinks = document.querySelectorAll('.text-links a, .icon-item[data-section]');
 
