--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
   <aside class="text-menu" id="text-menu">
     <div class="profile">
-      <img src="nobklogo.png" alt="John Mark Kiritu">
+      <img src="nobkprofpict(2).png" alt="John Mark Kiritu">
       <div><h4>John Mark Kiritu</h4><span>Creative Developer & Designer</span></div>
     </div>
     <div class="text-links">
